<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <GVL Name="KM" Id="{c916a42b-7fa4-487c-b497-82570ee7ce33}">
    <Declaration><![CDATA[VAR_GLOBAL
(*Timer für die Vereisungszeit wird deklariert*)
	TimerVereisung: 			TON; 

(*Status der Kältemaschine*)	
	bVereisungAbgeschlossen: 	BOOL;
	bAbtauenNotwendig:			BOOL;
	bAbtauenAbgeschlossen: 		BOOL;
	
(*(*Status der verschiedenen Kältekreis-Komponenten*)		 
	VF_Ventilator_ON:			BOOL:= FALSE;	// Im RI-Fließbild Bezeichnung: 1W2 
	VD_defrost_Ventilator_ON: 	BOOL:= FALSE;	// Im RI-Fließbild Bezeichnung: 1W3	
	Kompressor_ON: 				BOOL:= FALSE; 	// Im RI-Fließbild Bezeichnung: 1V1 
	ElektrischeHeizung_ON:		BOOL:= FALSE; *)
	
(*Kältemittel im Verdampfer*)
	VD_Kaltemittel_g: BOOL; //Agregatzustand vom Kältemittel im Verdampfer
	VD_Kaltemittel_l: BOOL; //Agregatzustand vom Kältemittel im Verdampfer
	
(*Fließgeschwindigkeit werden je nachdem auf TRUE oder FALSE eingeschaltet*)
	Fliessrichtung_normal:	BOOL := TRUE;
	Fliessrichtung_rev: 	BOOL := FALSE;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>